--- a/APIRestfulDoc/site/dockerhub/index.html
+++ b/APIRestfulDoc/site/dockerhub/index.html
@@ -41,10 +41,7 @@
                                 <a href="../install/" class="nav-link">Instalação</a>
                             </li>
                             <li class="nav-item">
-                                <a href="../api/" class="nav-link">API</a>
-                            </li>
-                            <li class="nav-item">
-                                <a href="../web/" class="nav-link">WEB</a>
+                                <a href="../endpoints/" class="nav-link">Endpoints</a>
                             </li>
                             <li class="nav-item">
                                 <a href="./" class="nav-link active" aria-current="page">Docker Hub</a>
@@ -52,13 +49,8 @@
                         </ul>
 
                     <ul class="nav navbar-nav ms-md-auto">
-                        <li class="nav-item">
-                            <a href="#" class="nav-link" data-bs-toggle="modal" data-bs-target="#mkdocs_search_modal">
-                                <i class="fa fa-search"></i> Search
-                            </a>
-                        </li>
                             <li class="nav-item">
-                                <a rel="prev" href="../web/" class="nav-link">
+                                <a rel="prev" href="../endpoints/" class="nav-link">
                                     <i class="fa fa-arrow-left"></i> Previous
                                 </a>
                             </li>
@@ -94,23 +86,26 @@
 </div></div>
                     <div class="col-md-9" role="main">
 
-<h2 id="comandos-utilizados-para-publicacao-no-docker-hub">Comandos utilizados para publicação no Docker Hub</h2>
+<div><h2 id="comandos-utilizados-para-publicacao-no-docker-hub">Comandos utilizados para publicação no Docker Hub</h2>
 <p>Logando no Docker Hub</p>
-<p>&nbsp;&nbsp;&nbsp;&nbsp;<code>docker login</code></p>
-<h3 id="dockerfile-da-api">Dockerfile da api <br/></h3>
-<p>Entrando na pasta api:  <br/>
-&nbsp;&nbsp;&nbsp;&nbsp;<code>cd api</code>  <br/>
-Construindo a imagem:  <br/>
-&nbsp;&nbsp;&nbsp;&nbsp;<code>docker build -t yanorck/api-apirestful_myanimelist:v1.0 .</code>  <br/>
-Publicando imagem no Docker Hub:  <br/>
-&nbsp;&nbsp;&nbsp;&nbsp;<code>docker push yanorck/api-apirestful_myanimelist:v1.0</code>  <br/></p>
-<h3 id="dockerfile-do-web">Dockerfile do web <br/></h3>
-<p>Entrando na pasta web: <br/>
-&nbsp;&nbsp;&nbsp;&nbsp;<code>cd web</code> <br/>
-Construindo a imagem: <br/>
-&nbsp;&nbsp;&nbsp;&nbsp;<code>docker build -t yanorck/web-apirestful_myanimelist:v1.0 .</code> <br/>
-    Publicando imagem no Docker Hub: <br/>
-&nbsp;&nbsp;&nbsp;&nbsp;<code>docker push yanorck/web-apirestful_myanimelist:v1.0</code></p></div>
+<p>    <code>docker login</code></p>
+<h3 id="dockerfile-da-api">Dockerfile da api <br></h3>
+<p>Entrando na pasta api:  <br>
+    <code>cd api</code>  <br>
+Construindo a imagem:  <br>
+    <code>docker build -t yanorck/api-apirestful_myanimelist:v1.0 .</code>  <br>
+Publicando imagem no Docker Hub:  <br>
+    <code>docker push yanorck/api-apirestful_myanimelist:v1.0</code>  <br></p>
+<h3 id="dockerfile-do-web">Dockerfile do web <br></h3>
+<p>Entrando na pasta web: <br>
+    <code>cd web</code> <br>
+Construindo a imagem: <br>
+    <code>docker build -t yanorck/web-apirestful_myanimelist:v1.0 .</code> <br>
+    Publicando imagem no Docker Hub: <br>
+    <code>docker push yanorck/web-apirestful_myanimelist:v1.0</code></p>
+<p>Links:<br>
+https://hub.docker.com/repository/docker/yanorck/api-apirestful_myanimelist/general<br>
+https://hub.docker.com/r/yanorck/web-apirestful_myanimelist  </p></div></div>
             </div>
         </div>
 
@@ -124,29 +119,8 @@ Construindo a imagem: <br/>
                 shortcuts = {"help": 191, "next": 78, "previous": 80, "search": 83};
         </script>
         <script src="../js/base.js"></script>
-        <script src="../search/main.js"></script>
 
-        <div class="modal" id="mkdocs_search_modal" tabindex="-1" role="dialog" aria-labelledby="searchModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-lg">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h4 class="modal-title" id="searchModalLabel">Search</h4>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body">
-                <p>From here you can search these documents. Enter your search terms below.</p>
-                <form>
-                    <div class="form-group">
-                        <input type="search" class="form-control" placeholder="Search..." id="mkdocs-search-query" title="Type search term here">
-                    </div>
-                </form>
-                <div id="mkdocs-search-results" data-no-results-text="No results found"></div>
-            </div>
-            <div class="modal-footer">
-            </div>
-        </div>
-    </div>
-</div><div class="modal" id="mkdocs_keyboard_modal" tabindex="-1" role="dialog" aria-labelledby="keyboardModalLabel" aria-hidden="true">
+        <div class="modal" id="mkdocs_keyboard_modal" tabindex="-1" role="dialog" aria-labelledby="keyboardModalLabel" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
