--- a/APIRestfulDoc/site/index.html
+++ b/APIRestfulDoc/site/index.html
@@ -41,10 +41,7 @@
                                 <a href="install/" class="nav-link">Instalação</a>
                             </li>
                             <li class="nav-item">
-                                <a href="api/" class="nav-link">API</a>
-                            </li>
-                            <li class="nav-item">
-                                <a href="web/" class="nav-link">WEB</a>
+                                <a href="endpoints/" class="nav-link">Endpoints</a>
                             </li>
                             <li class="nav-item">
                                 <a href="dockerhub/" class="nav-link">Docker Hub</a>
@@ -52,11 +49,6 @@
                         </ul>
 
                     <ul class="nav navbar-nav ms-md-auto">
-                        <li class="nav-item">
-                            <a href="#" class="nav-link" data-bs-toggle="modal" data-bs-target="#mkdocs_search_modal">
-                                <i class="fa fa-search"></i> Search
-                            </a>
-                        </li>
                             <li class="nav-item">
                                 <a rel="prev" class="nav-link disabled">
                                     <i class="fa fa-arrow-left"></i> Previous
@@ -85,13 +77,13 @@
     <div id="toc-collapse" class="navbar-collapse collapse card bg-body-tertiary">
         <ul class="nav flex-column">
             
-            <li class="nav-item" data-bs-level="1"><a href="#welcome-to-mkdocs" class="nav-link">Welcome to MkDocs</a>
+            <li class="nav-item" data-bs-level="1"><a href="#apirestful-dos-principais-animes-em-lancamento-no-myanimelist" class="nav-link">APIRestful dos principais animes em lançamento no MyAnimeList</a>
               <ul class="nav flex-column">
-            <li class="nav-item" data-bs-level="2"><a href="#commands" class="nav-link">Commands</a>
+            <li class="nav-item" data-bs-level="2"><a href="#o-que-e-o-myanimelist" class="nav-link">O que é o MyAnimeList?</a>
               <ul class="nav flex-column">
               </ul>
             </li>
-            <li class="nav-item" data-bs-level="2"><a href="#project-layout" class="nav-link">Project layout</a>
+            <li class="nav-item" data-bs-level="2"><a href="#funcionalidades-da-api" class="nav-link">Funcionalidades da API</a>
               <ul class="nav flex-column">
               </ul>
             </li>
@@ -102,21 +94,24 @@
 </div></div>
                     <div class="col-md-9" role="main">
 
-<h1 id="welcome-to-mkdocs">Welcome to MkDocs</h1>
-<p>For full documentation visit <a href="https://www.mkdocs.org">mkdocs.org</a>.</p>
-<h2 id="commands">Commands</h2>
+<div><h1 id="apirestful-dos-principais-animes-em-lancamento-no-myanimelist">APIRestful dos principais animes em lançamento no MyAnimeList</h1>
+<h2 id="o-que-e-o-myanimelist">O que é o MyAnimeList?</h2>
+<p><strong>MyAnimeList</strong> (MAL) é uma rede social voltada para fãs de animes e mangás, com o objetivo de oferecer um espaço para que os usuários possam criar listas pessoais, catalogando e classificando as obras de acordo com suas avaliações. Além de facilitar a descoberta de usuários com gostos similares, o MAL proporciona acesso a um vasto banco de dados sobre animes e mangás.</p>
+<p>Em 2015, o MyAnimeList recebeu cerca de 120 milhões de visitantes mensais, consolidando-se como uma das maiores plataformas de anime e mangá.<br>
+Saiba mais na <a href="https://pt.wikipedia.org/wiki/MyAnimeList">Wikipédia</a>.</p>
+<p><img alt="alt text" src="image.png"></p>
+<h2 id="funcionalidades-da-api">Funcionalidades da API</h2>
+<p>A API utiliza web scraping para coletar dados dos principais animes em lançamento na página do MyAnimeList, focando nos 50 animes com maior número de membros que os favoritaram. A partir dessa coleta, a API retorna as seguintes informações para cada anime:</p>
 <ul>
-<li><code>mkdocs new [dir-name]</code> - Create a new project.</li>
-<li><code>mkdocs serve</code> - Start the live-reloading docs server.</li>
-<li><code>mkdocs build</code> - Build the documentation site.</li>
-<li><code>mkdocs -h</code> - Print help message and exit.</li>
+<li><strong>rank</strong>: Posição do anime na lista de lançamentos em número de membros.</li>
+<li><strong>title</strong>: Título do anime.</li>
+<li><strong>link</strong>: Link direto para a página do anime no MyAnimeList.</li>
+<li><strong>image_url</strong>: URL da imagem de capa do anime.</li>
+<li><strong>data_lancamento</strong>: Data prevista para o lançamento do anime.</li>
+<li><strong>membros</strong>: Quantidade de membros que favoritaram o anime.</li>
 </ul>
-<h2 id="project-layout">Project layout</h2>
-<pre><code>mkdocs.yml    # The configuration file.
-docs/
-    index.md  # The documentation homepage.
-    ...       # Other markdown pages, images and other files.
-</code></pre></div>
+<hr>
+<p><div class="video-container"><video style="width:50%" muted controls alt="type:video"><source src="https://youtu.be/1p-2ADhFrWU" type="video/mp4"></source></video></div></p></div></div>
             </div>
         </div>
 
@@ -130,29 +125,8 @@ docs/
                 shortcuts = {"help": 191, "next": 78, "previous": 80, "search": 83};
         </script>
         <script src="js/base.js"></script>
-        <script src="search/main.js"></script>
 
-        <div class="modal" id="mkdocs_search_modal" tabindex="-1" role="dialog" aria-labelledby="searchModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-lg">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h4 class="modal-title" id="searchModalLabel">Search</h4>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body">
-                <p>From here you can search these documents. Enter your search terms below.</p>
-                <form>
-                    <div class="form-group">
-                        <input type="search" class="form-control" placeholder="Search..." id="mkdocs-search-query" title="Type search term here">
-                    </div>
-                </form>
-                <div id="mkdocs-search-results" data-no-results-text="No results found"></div>
-            </div>
-            <div class="modal-footer">
-            </div>
-        </div>
-    </div>
-</div><div class="modal" id="mkdocs_keyboard_modal" tabindex="-1" role="dialog" aria-labelledby="keyboardModalLabel" aria-hidden="true">
+        <div class="modal" id="mkdocs_keyboard_modal" tabindex="-1" role="dialog" aria-labelledby="keyboardModalLabel" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
@@ -198,5 +172,5 @@ docs/
 
 <!--
 MkDocs version : 1.6.1
-Build Date UTC : 2024-10-30 22:54:35.700240+00:00
+Build Date UTC : 2024-10-31 16:51:46.347339+00:00
 -->
