--- a/APIRestfulDoc/site/install/index.html
+++ b/APIRestfulDoc/site/install/index.html
@@ -41,10 +41,7 @@
                                 <a href="./" class="nav-link active" aria-current="page">Instalação</a>
                             </li>
                             <li class="nav-item">
-                                <a href="../api/" class="nav-link">API</a>
-                            </li>
-                            <li class="nav-item">
-                                <a href="../web/" class="nav-link">WEB</a>
+                                <a href="../endpoints/" class="nav-link">Endpoints</a>
                             </li>
                             <li class="nav-item">
                                 <a href="../dockerhub/" class="nav-link">Docker Hub</a>
@@ -52,18 +49,13 @@
                         </ul>
 
                     <ul class="nav navbar-nav ms-md-auto">
-                        <li class="nav-item">
-                            <a href="#" class="nav-link" data-bs-toggle="modal" data-bs-target="#mkdocs_search_modal">
-                                <i class="fa fa-search"></i> Search
-                            </a>
-                        </li>
                             <li class="nav-item">
                                 <a rel="prev" href=".." class="nav-link">
                                     <i class="fa fa-arrow-left"></i> Previous
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a rel="next" href="../api/" class="nav-link">
+                                <a rel="next" href="../endpoints/" class="nav-link">
                                     Next <i class="fa fa-arrow-right"></i>
                                 </a>
                             </li>
@@ -84,12 +76,33 @@
     
     <div id="toc-collapse" class="navbar-collapse collapse card bg-body-tertiary">
         <ul class="nav flex-column">
+            
+            <li class="nav-item" data-bs-level="1"><a href="#como-executar-a-aplicacao" class="nav-link">Como executar a aplicação</a>
+              <ul class="nav flex-column">
+            <li class="nav-item" data-bs-level="2"><a href="#instalando-docker-desktop" class="nav-link">Instalando Docker Desktop</a>
+              <ul class="nav flex-column">
+              </ul>
+            </li>
+            <li class="nav-item" data-bs-level="2"><a href="#executando-a-aplicacao" class="nav-link">Executando a aplicação</a>
+              <ul class="nav flex-column">
+              </ul>
+            </li>
+              </ul>
+            </li>
         </ul>
     </div>
 </div></div>
                     <div class="col-md-9" role="main">
 
-</div>
+<div><h1 id="como-executar-a-aplicacao">Como executar a aplicação</h1>
+<h2 id="instalando-docker-desktop">Instalando Docker Desktop</h2>
+<p>Para rodar a aplicação é necessário possuir o docker desktop instalado, caso não possua: https://www.docker.com/products/docker-desktop/</p>
+<h2 id="executando-a-aplicacao">Executando a aplicação</h2>
+<p>Após clonar o repositório, entre no terminal na pasta raiz do projeto e execute:
+<code>docker compose up -d --build</code></p>
+<p>Após isso, as requisições para a API estarão funcionando pela porta localhost:8080.</p>
+<p>Após o primeir build, basta execultar 
+<code>docker compose up -d</code></p></div></div>
             </div>
         </div>
 
@@ -103,29 +116,8 @@
                 shortcuts = {"help": 191, "next": 78, "previous": 80, "search": 83};
         </script>
         <script src="../js/base.js"></script>
-        <script src="../search/main.js"></script>
 
-        <div class="modal" id="mkdocs_search_modal" tabindex="-1" role="dialog" aria-labelledby="searchModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-lg">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h4 class="modal-title" id="searchModalLabel">Search</h4>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body">
-                <p>From here you can search these documents. Enter your search terms below.</p>
-                <form>
-                    <div class="form-group">
-                        <input type="search" class="form-control" placeholder="Search..." id="mkdocs-search-query" title="Type search term here">
-                    </div>
-                </form>
-                <div id="mkdocs-search-results" data-no-results-text="No results found"></div>
-            </div>
-            <div class="modal-footer">
-            </div>
-        </div>
-    </div>
-</div><div class="modal" id="mkdocs_keyboard_modal" tabindex="-1" role="dialog" aria-labelledby="keyboardModalLabel" aria-hidden="true">
+        <div class="modal" id="mkdocs_keyboard_modal" tabindex="-1" role="dialog" aria-labelledby="keyboardModalLabel" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
