--- a/APIRestfulDoc/site/index.html
+++ b/APIRestfulDoc/site/index.html
@@ -87,6 +87,10 @@
               <ul class="nav flex-column">
               </ul>
             </li>
+            <li class="nav-item" data-bs-level="2"><a href="#video-de-funcionamento" class="nav-link">Vídeo de funcionamento</a>
+              <ul class="nav flex-column">
+              </ul>
+            </li>
               </ul>
             </li>
         </ul>
@@ -111,7 +115,9 @@ Saiba mais na <a href="https://pt.wikipedia.org/wiki/MyAnimeList">Wikipédia</a>
 <li><strong>membros</strong>: Quantidade de membros que favoritaram o anime.</li>
 </ul>
 <hr>
-<p><div class="video-container"><video style="width:50%" muted controls alt="type:video"><source src="https://youtu.be/1p-2ADhFrWU" type="video/mp4"></source></video></div></p></div></div>
+<h2 id="video-de-funcionamento">Vídeo de funcionamento</h2>
+<p><img alt="Assista ao vídeo no YouTube" src="https://img.youtube.com/vi/1p-2ADhFrWU/0.jpg">
+<a href="https://www.youtube.com/watch?v=1p-2ADhFrWU">Clique aqui para ver no YouTube</a></p></div></div>
             </div>
         </div>
 
@@ -172,5 +178,5 @@ Saiba mais na <a href="https://pt.wikipedia.org/wiki/MyAnimeList">Wikipédia</a>
 
 <!--
 MkDocs version : 1.6.1
-Build Date UTC : 2024-10-31 16:51:46.347339+00:00
+Build Date UTC : 2024-10-31 17:07:31.198649+00:00
 -->
