--- a/APIRestfulDoc/site/404.html
+++ b/APIRestfulDoc/site/404.html
@@ -46,6 +46,9 @@
                             <li class="nav-item">
                                 <a href="/dockerhub/" class="nav-link">Docker Hub</a>
                             </li>
+                            <li class="nav-item">
+                                <a href="/aws/" class="nav-link">AWS</a>
+                            </li>
                         </ul>
 
                     <ul class="nav navbar-nav ms-md-auto">
