--- a/APIRestfulDoc/site/dockerhub/index.html
+++ b/APIRestfulDoc/site/dockerhub/index.html
@@ -46,6 +46,9 @@
                             <li class="nav-item">
                                 <a href="./" class="nav-link active" aria-current="page">Docker Hub</a>
                             </li>
+                            <li class="nav-item">
+                                <a href="../aws/" class="nav-link">AWS</a>
+                            </li>
                         </ul>
 
                     <ul class="nav navbar-nav ms-md-auto">
@@ -55,7 +58,7 @@
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a rel="next" class="nav-link disabled">
+                                <a rel="next" href="../aws/" class="nav-link">
                                     Next <i class="fa fa-arrow-right"></i>
                                 </a>
                             </li>
